kubernetes/pod.yaml
apiVersion: v1
kind: Pod

metadata:
   name: nwapp-pod
   labels:
      app: nwapp
      version: v1

spec:
   containers:
   - name: nwapp
     image: chukmunnlee/northwind-app:v1
     imagePullPolicy: IfNotPresent 
     ports:
     - containerPort: 3000
     livenessProbe:
        httpGet:
           path: /health
           port: 3000
