kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: nwapp-deploy

spec:
   replicas: 2
   selector:
      matchLabels:
         app: nwapp
         version: v1

   template:
      metadata:
         name: nwapp-pod
         labels:
            app: nwapp
            version: v1

      spec:
         containers:
         - name: nwapp
           image: chukmunnlee/northwind-app:v1
           imagePullPolicy: IfNotPresent 
           ports:
           - containerPort: 3000
           livenessProbe:
              httpGet:
                 path: /health
                 port: 3000
           resources:
              requests:
                 cpu: 200m

---

apiVersion: v1
kind: Service

metadata:
   name: nwapp-svc

spec:
   type: NodePort 
   selector:
      app: nwapp
      version: v1

   ports:
   - port: 8080
     targetPort: 3000
