kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
   name: nwapp-ing
   annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/rewrite-target: "/"

spec:
   backend:
      serviceName: default-http-backend
      servicePort: 80
   rules:
   - http:
         paths:
         - path: /
           backend:
              serviceName: nwappv2-svc
              servicePort: 8080
         - path: /v1
           backend:
              serviceName: nwapp-svc
              servicePort: 8080
